// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullReview FullReview component 1`] = `
<div
  className="attempt-review-container"
>
  <div
    className="attempt-button-container is-showing-one-item"
  >
    <div
      className="obojobo-draft--components--button-bar"
    />
  </div>
</div>
`;

exports[`FullReview FullReview component with attempt 1`] = `
<div
  className="attempt-review-container"
>
  <div
    className="attempt-button-container is-showing-one-item"
  >
    <div
      className="obojobo-draft--components--button-bar"
    >
      <div
        className="is-selected"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            disabled={undefined}
            onClick={[Function]}
            tabIndex={undefined}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FullReview FullReview component with fully displayed attempt 1`] = `
<div
  className="attempt-review-container"
>
  <div
    className="attempt-button-container is-showing-one-item"
  >
    <div
      className="obojobo-draft--components--button-bar"
    >
      <div
        className="is-selected"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            disabled={undefined}
            onClick={[Function]}
            tabIndex={undefined}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FullReview FullReview component with highest attempt 1`] = `
<div
  className="attempt-review-container"
>
  <div
    className="attempt-button-container is-showing-one-item"
  >
    <div
      className="obojobo-draft--components--button-bar"
    >
      <div
        className="is-selected"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            disabled={undefined}
            onClick={[Function]}
            tabIndex={undefined}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FullReview FullReview component with last taken attempt 1`] = `
<div
  className="attempt-review-container"
>
  <div
    className="attempt-button-container is-showing-one-item"
  >
    <div
      className="obojobo-draft--components--button-bar"
    >
      <div
        className="is-selected"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            disabled={undefined}
            onClick={[Function]}
            tabIndex={undefined}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="attempt-results"
  >
    <div
      className="attempt-header"
    >
      <div
        className="attempt-info-container"
      >
        <svg
          viewBox="0 0 114.33 114.33"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <style>
              .cls-1{fill:#eadff6;}.cls-2{fill:#fff;}.cls-3{fill:#d7c6ed;}.cls-4{fill:#8fb9eb;}.cls-5{fill:#e8f3e2;}.cls-6{fill:#77b851;}
            </style>
          </defs>
          <title>
            obo-assessment-review-icon
          </title>
          <circle
            className="cls-1"
            cx="57.17"
            cy="57.17"
            r="57.17"
          />
          <rect
            className="cls-2"
            height="56.6"
            rx="3.72"
            ry="3.72"
            width="49.33"
            x="32.5"
            y="28.87"
          />
          <path
            className="cls-3"
            d="M43.15,39.35a4.06,4.06,0,1,0,4.06,4.06A4.06,4.06,0,0,0,43.15,39.35Zm0,6.31a2.25,2.25,0,1,1,2.25-2.25A2.25,2.25,0,0,1,43.15,45.67Z"
          />
          <rect
            className="cls-3"
            height="4.25"
            rx="2.12"
            ry="2.12"
            width="23.75"
            x="51.5"
            y="41.29"
          />
          <path
            className="cls-3"
            d="M43.15,53.1a4.06,4.06,0,1,0,4.06,4.06A4.06,4.06,0,0,0,43.15,53.1Zm0,6.31a2.25,2.25,0,1,1,2.25-2.25A2.25,2.25,0,0,1,43.15,59.42Z"
          />
          <rect
            className="cls-3"
            height="4.25"
            rx="2.12"
            ry="2.12"
            width="23.75"
            x="51.5"
            y="55.04"
          />
          <path
            className="cls-3"
            d="M43.15,66.85a4.06,4.06,0,1,0,4.06,4.06A4.06,4.06,0,0,0,43.15,66.85Z"
          />
          <rect
            className="cls-3"
            height="4.25"
            rx="2.12"
            ry="2.12"
            width="23.75"
            x="51.5"
            y="68.79"
          />
          <path
            className="cls-2"
            d="M91.27,81.5l-5.39-5.39a15.3,15.3,0,1,0-7.65,7.74l5.35,5.35a3.53,3.53,0,0,0,5,0l2.72-2.72A3.53,3.53,0,0,0,91.27,81.5Z"
          />
          <path
            className="cls-4"
            d="M88.24,83.1,82,76.86A11.87,11.87,0,1,0,78.82,80l6.24,6.24a1.25,1.25,0,0,0,1.76,0l1.42-1.42A1.25,1.25,0,0,0,88.24,83.1Z"
          />
          <circle
            className="cls-5"
            cx="72.16"
            cy="70.2"
            r="8.79"
          />
          <path
            className="cls-6"
            d="M78.18,67.41l-1.75-1.75a.67.67,0,0,0-.94,0l-4.17,4.17L69.46,68a.67.67,0,0,0-.94,0l-1.75,1.75a.67.67,0,0,0,0,.94l2.72,2.72h0l1.35,1.35a.67.67,0,0,0,.94,0l6.39-6.39A.67.67,0,0,0,78.18,67.41Z"
          />
        </svg>
        <div
          className="attempt-info-content-container"
        >
          <h4>
            <strong>
              Attempt undefined
            </strong>
          </h4>
          <div
            className="attempt-info-content"
          >
            <ul>
              <li>
                6/5/18 at 4:28pm
              </li>
              <li>
                 out of 
                1
                 questions correct
              </li>
              <li>
                Attempt Score: 
                <strong>
                  80% → 80%
                </strong>
                <div
                  className="obojobo-draft--components--more-info-button is-default-label is-mode-hidden"
                >
                  <button
                    onClick={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    ?
                  </button>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="review is-basic-review"
    >
      <div
        className="is-not-correct"
      >
        <p>
          Question 1: Incorrect
        </p>
        <div
          className="component obojobo-draft--chunks--question is-not-correct is-active is-mode-practice"
          data-focussed={false}
          data-id="question"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Question"
          id="obo-question"
        >
          <div
            className="flipper"
          >
            <div
              className="content back"
            >
              <div
                className="obojobo-draft--chunks--mc-question--content"
              />
              <div
                className="pad responses-hidden"
              >
                (Responses Hidden)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FullReview FullReview component with non-passing attempt 1`] = `
<div
  className="attempt-review-container"
>
  <div
    className="attempt-button-container is-showing-one-item"
  >
    <div
      className="obojobo-draft--components--button-bar"
    >
      <div
        className="is-selected"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            disabled={undefined}
            onClick={[Function]}
            tabIndex={undefined}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FullReview FullReview component with two attempts 1`] = `
<div
  className="attempt-review-container"
>
  <div
    className="attempt-button-container null"
  >
    <div
      className="obojobo-draft--components--button-bar"
    >
      <div
        className=""
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            disabled={undefined}
            onClick={[Function]}
            tabIndex={undefined}
          />
        </div>
      </div>
      <div
        className="is-selected"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            disabled={undefined}
            onClick={[Function]}
            tabIndex={undefined}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
